# rsyncwrap

./: README.md  pyproject.toml  setup.py
rsyncwrap/: helpers.py  main.py
tests/: test_rsync.py
